<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0e0e0"
    android:orientation="vertical"
    android:weightSum="15"
    tools:context="com.example.ashu.calci.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="5"
        android:background="#ffffff">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="end|bottom"
            android:textColor="#000000"
            android:textSize="46sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="2"
        android:background="#e0e0e0"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonAC"
            android:layout_width="140dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/ac"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/imageButtonClear"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="@android:color/background_light"
            app:srcCompat="@drawable/clearr"
            android:contentDescription="@string/clear_button_image" />

        <ImageButton
            android:id="@+id/imageButtonDivide"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="@android:color/background_light"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            app:srcCompat="@drawable/divide"
            android:contentDescription="@string/divide_button_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="2"
        android:background="#e0e0e0"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button7"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num7"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num8"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num9"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/imageButtonMultiply"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            app:srcCompat="@drawable/multiply" 
            android:contentDescription="@string/multiply_button_image"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="2"
        android:background="#e0e0e0"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button4"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num4"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num5"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num6"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/imageButtonSubtract"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            app:srcCompat="@drawable/subtract"
            android:contentDescription="@string/subtract_button_image"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="2"
        android:background="#e0e0e0"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button1"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num1"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num2"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num3"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/imageButtonAdd"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            app:srcCompat="@drawable/add"
            android:contentDescription="@string/add_button_image"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="2"
        android:background="#e0e0e0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num0"
            android:textSize="32sp" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:text="@string/num."
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/imageButtonEqual"
            android:layout_width="190dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:background="#ffffff"
            android:contentDescription="@string/equal_button_image"
            app:srcCompat="@drawable/equal" />
    </LinearLayout>

</LinearLayout>
